# Green-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  renderdoc_start.cap
cmake/: FindGLEWosd.cmake  Libraries.cmake
include/com/ethanbreit/: bullshit.h  custom_property_widgets.h  ent_viewer.h  fileloader.h  game_viewer.h  inspector.h  resource_interface.h  test.h  util.h
include/com/ethanbreit/core/: core.h
include/com/ethanbreit/ui/: ui.h
include/com/ethanbreit/ui/widgets/: scene_widget.h
libs/compiled/: nanogui.exp  nanogui.lib
libs/headers/: nuklear_glfw_gl3.h
libs/headers/ge/OpenGL/types/: GLWindow.h
libs/headers/ge/default_geom/: Cube.h
libs/headers/ge/graphics/abs/OpenGL/types/: GLFrameBuffer.h
libs/headers/ge/memory/: GlobalMemory.h
libs/headers/mtlpp/.build/macos_10.10/: 00_init  01_clear  02_triangle  03_compute  04_window
libs/headers/mtlpp/.build/macos_10.11/: 00_init  01_clear  02_triangle  03_compute  04_window
libs/headers/mtlpp/.build/macos_10.12/: 00_init  01_clear  02_triangle  03_compute  04_window
libs/headers/mtlpp/.build/macos_10.9/: 00_init  01_clear  02_triangle  03_compute  04_window
old_stuff/old/core/: core.cpp
old_stuff/old/ui/widgets/: scene_widget.cpp
old_stuff/ui/: ui.h
old_stuff/ui/file_loader/: fileloader.h
old_stuff/ui/widgets/: scene_widget.h  staticobject_widget.h
res/debug/SolidColour/.emacs_saves/: solid.frag~  solid.gesm~  solid.vert~
res/engine/: global_settings.pre
res/engine/defaults/forward/unlit/: textured.gesm  vo_textured.gesm  vo_textured.glsl
src/com/ethanbreit/: bullshit.cpp  custom_property_widgets.cpp  ent_viewer.cpp  fileloader.cpp  game_viewer.cpp  inspector.cpp  main.cpp  resource_interface.cpp  test.cpp  util.cpp
src/com/ethanbreit/core/: core.cpp  main.cpp
src/com/ethanbreit/ui/: ui.cpp
src/com/ethanbreit/ui/file_loader/: fileloader.cpp
src/com/ethanbreit/ui/widgets/: scene_widget.cpp  staticobject_widget.cpp
